31.01.2019
==========
hcxhash2cap: added option to cenvert hccapx to cap
$ hcxhash2cap -h
hcxhash2cap 5.1.0 (C) 2019 ZeroBeat
usage:
hcxhash2cap <options>

options:
-c <file> : output cap file
            if no cap file is selected, output will be written to single cap files
            format: mac_sta.cap (mac_sta.cap_x)

--pmkid=<file>  : input PMKID hash file
--hccapx=<file> : input hashcat hccapx file
--help          : show this help
--version       : show version


29.01.2019
==========
aded new tool: hcxhash2cap
$ ./hcxhash2cap -h
hcxhash2cap 5.1.0 (C) 2019 ZeroBeat
usage:
hcxhash2cap <options>

options:
-c <file> : output cap file
            if no cap file selected, output wil be written to single cap files
            format: mac_sta.cap (mac_sta.cap_x)

--pmkid=<file>  : input PMKID hash file
--help          : show this help
--version       : show version


todo: hccapx -> cap
hcxhash2cap will replace wlanhcx2cap, soon


22.01.2019
==========
hcxpcaptool: in preparation of hccapx successor, hcxpcaptool now count oversized (>0xff) EAPOLframes
             EAPOL packets (oversized)....: xx
read more here:
https://github.com/hashcat/hashcat/issues/1816


13.12.2018
==========
hcxpcaptool: removed options -x and -X (old hccap format)
hcxpcaptool: added options --hccap-out and --hccap-raw-out (old hccap format)
--hccap-out=<file>                : output old hccap file (hashcat -m 2500)
--hccap-raw-out=<file>            : output raw old hccap file (hashcat -m 2500)


09.12.2018
==========
hcxpcaptool: detect EAPOL GROUP KEYs
hcxpcaptool: move option -H to --hexdump-out
hcxpcaptool: added new options (--eapol-out, --network-out)
--eapol-out=<file>                : output EAPOL packets in hex
                                    format = mac_ap:mac_sta:eapol
--network-out=<file>              : output network information
                                    format = mac_ap:ESSID
--hexdump-out=<file>              : output dump raw packets in hex


05.12.2018